--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "version": "0.1.0",
   "preferGlobal": true,
   "bin": {
-    "testsuite": "./bin/index.js"
+    "testsuite": "./dist/testsuite.js"
   },
-  "main": "src/index.js",
+  "main": "src/bin/index.js",
   "license": "MIT",
   "dependencies": {
+    "@babel/preset-env": "^7.11.5",
     "@ezraobiwale/http": "^1.3.0",
+    "@rollup/plugin-json": "^4.1.0",
     "clear": "^0.1.0",
     "clui": "^0.3.6",
     "colors": "^1.4.0",
@@ -20,5 +22,16 @@
     "inquirer": "^7.1.0",
     "lodash": "^4.17.15",
     "open": "^7.2.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "rollup": "^1.29.1",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-terser": "^5.2.0"
+  },
+  "scripts": {
+    "build": "rollup -c"
   }
 }
