--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "@dscribe/testsuite-cli",
-  "description": "A command-line utility app for TestSuite",
+  "name": "@dscribe/testsoothe-cli",
+  "description": "A command-line utility app for TestSoothe",
   "version": "0.1.0",
   "preferGlobal": true,
   "bin": {
-    "testsuite": "./dist/testsuite.js"
+    "testsoote": "./dist/index.js"
   },
-  "main": "src/bin/index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "dependencies": {
-    "@babel/preset-env": "^7.11.5",
     "@ezraobiwale/http": "^1.3.0",
-    "@rollup/plugin-json": "^4.1.0",
     "clear": "^0.1.0",
     "clui": "^0.3.6",
     "colors": "^1.4.0",
@@ -25,13 +23,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@rollup/plugin-commonjs": "^15.0.0",
+    "@babel/preset-env": "^7.11.5",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "rollup": "^1.29.1",
     "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-preserve-shebang": "^1.0.1",
     "rollup-plugin-terser": "^5.2.0"
   },
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c && chmod a+x dist/index.js"
   }
 }
