--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "version": "0.1.0",
   "preferGlobal": true,
   "bin": {
-    "testsoote": "./dist/index.js"
+    "testsoothe": "./dist/index.js"
   },
   "main": "dist/index.js",
   "license": "MIT",
   "dependencies": {
     "@ezraobiwale/http": "^1.3.0",
+    "chrome-launcher": "^0.13.4",
+    "chrome-remote-interface": "^0.30.0",
     "clear": "^0.1.0",
     "clui": "^0.3.6",
     "colors": "^1.4.0",
@@ -19,7 +21,7 @@
     "figlet": "^1.4.0",
     "inquirer": "^7.1.0",
     "lodash": "^4.17.15",
-    "open": "^7.2.1"
+    "open": "^8.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
