--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "license": "MIT",
   "dependencies": {
     "@ezraobiwale/http": "^1.3.0",
-    "chrome-launcher": "^0.13.4",
-    "chrome-remote-interface": "^0.30.0",
     "clear": "^0.1.0",
     "clui": "^0.3.6",
     "colors": "^1.4.0",
@@ -21,7 +19,7 @@
     "figlet": "^1.4.0",
     "inquirer": "^7.1.0",
     "lodash": "^4.17.15",
-    "open": "^8.0.4"
+    "puppeteer": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
