Enables remote debugging
- Provides test options to "test" sub command
- Changes console text prefix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   cli:
-    image: testsoothe/cli
+    image: dscribe/testsoothe-cli
     build:
       context: .
     environment:
