--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@ezraobiwale/http": "^1.3.0",
     "clear": "^0.1.0",
-    "clui": "^0.3.6",
     "colors": "^1.4.0",
     "commander": "^5.1.0",
     "configstore": "^5.0.1",
@@ -20,19 +19,16 @@
     "inquirer": "^7.1.0",
     "lodash": "^4.17.15",
     "log-symbols": "^4.1.0",
+    "ora": "^5.4.0",
     "puppeteer": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "rollup": "^1.29.1",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-preserve-shebang": "^1.0.1",
-    "rollup-plugin-terser": "^5.2.0"
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "@parcel/babylon-walk": "^2.0.0-nightly.1765",
+    "parcel": "^2.0.0-beta.3.1"
   },
   "scripts": {
-    "build": "rollup -c && chmod a+x dist/index.js"
+    "build": "./build"
   }
 }
