--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "parcel": "^2.0.0-beta.3.1"
   },
   "scripts": {
-    "build": "./build"
+    "build": "./build",
+    "test": "exit 0"
   }
 }
