--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=TestSoothe
-DOMAIN_URL=
-API_URL=
+TESTSOOTHE_APP_NAME=TestSoothe
+TESTSOOTHE_DOMAIN_URL=
+TESTSOOTHE_API_URL=
 TEST_DEBUGGING_PORT=5114
