Removes the whole dist directory when building

--- a/build
+++ b/build
@@ -1,6 +1,6 @@
 #!/usr/bin/env sh
 
-rm dist/index.js
+rm -rf dist
 yarn parcel build --no-source-maps src/bin/index.js
 printf '%s\n\n%s\n' "#!/usr/bin/env node" "$(cat dist/index.js)" > dist/index.js
 chmod a+x dist/index.js
