--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test",
     "runner"
   ],
-  "version": "1.3.1",
+  "version": "1.4.3",
   "preferGlobal": true,
   "bin": {
     "testsoothe": "./dist/index.js"
@@ -21,6 +21,7 @@
     "colors": "^1.4.0",
     "commander": "^5.1.0",
     "configstore": "^5.0.1",
+    "cosmiconfig": "^7.0.1",
     "dotenv": "^8.2.0",
     "figlet": "^1.4.0",
     "import": "^0.0.6",
